# rz-lang

./: .gitignore  Makefile  README.md  config.mk.acr  configure  configure.acr  install.mk
.github/workflows/: c-cpp.yml  ci.yml
python/: build.mk  meson.build  python.c  rizin.py
python/examples/: test-py-analysis.py  test-py-asm.py  test-py-core.py  test-py-io.py
python/python/: analysis.c  analysis.h  asm.c  asm.h  bin.c  bin.h  common.c  common.h  core.c  core.h  io.c  io.h
test/db/extras/: python
